Fixed minor bug (invisible but clickable phone nav list in inactive status) on responsive navigation bar #44

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -566,6 +566,7 @@ body {
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
 
 .phone-nav__nav {
+    display: none;
     height: 100vh;
     width: 0;
     position: fixed;
@@ -603,6 +604,7 @@ body {
     transform: scale(100); }
 
 .phone-nav__checkbox:checked ~ .phone-nav__nav {
+    display: block;
     opacity: 1;
     width: 100%; }
 
